# bur-gazebo

bur_gz/: package.xml  setup.cfg  setup.py
bur_gz/bur_gz/: thruster_middleware.py
bur_gz/config/: thruster_config.yaml
bur_gz/launch/: bur_display.launch.py  bur_sim.launch.py  state_publisher.launch.py  world.launch.py
bur_gz/meshes/: Impeller.STL
bur_gz/rviz/: view.rviz
bur_gz/urdf/: bur.urdf  bur.urdf.xacro  camera.urdf.xacro  colors.urdf.xacro  gen_urdf.sh  helpers.urdf.xacro  hydrodynamics.urdf.xacro  imu.urdf.xacro  thruster.urdf.xacro
bur_gz/worlds/: demo_world.sdf
bur_gz_thruster_bridge/: CMakeLists.txt  package.xml
bur_gz_thruster_bridge/launch/: thruster_bridge.launch.py
bur_gz_thruster_bridge/src/: thruster_bridge_node.cpp
bur_joystick_control/: CMakeLists.txt  package.xml
bur_joystick_control/launch/: joystick_control.launch.py  network_joystick.launch.py
bur_joystick_control/src/: joystick_converter.cpp  network_joystick.cpp
